# FontSrt2

./: .gitignore  Cargo.toml  README.md
src/: error.rs  main.rs
src/cli/: args.rs  interaction.rs  mod.rs
src/font/: foundry.rs  metadata.rs  mod.rs  weight.rs
src/models/: config.rs  font.rs  mod.rs
src/organizer/: batch.rs  group.rs  mod.rs  processor.rs
src/utils/: file.rs  logging.rs  mod.rs  naming.rs
