[package]
name = "FontSrt"
version = "0.1.0"
edition = "2021"
description = "A font sorting and organizing tool"
authors = ["FontSrt Team"]

[dependencies]
font-kit = "0.14.2"
ttf-parser = "0.24.1"
rayon = "1.5"
regex = "1"
lazy_static = "1.4"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
